--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -32,7 +32,7 @@
 
     <!-- Sección para mostrar la predicción -->
     <div id="prediction">
-        <p>Predicción: <span id="current-prediction">Esperando...</span></p>
+        <p>Letra detectada: <span id="current-prediction">Esperando...</span></p>
     </div>
 
     <script>
